--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "vercel-build": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +39,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
+  },
+  "vercel": {
+    "builds": [
+      { "src": "package.json", "use": "@vercel/static-build" }
+    ]
   }
 }
