--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "easy-landing-page",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -38,11 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.3"
-  },
-  "vercel": {
-    "builds": [
-      { "src": "package.json", "use": "@vercel/static-build" }
-    ]
   }
 }
